fix(modal): add class to body to hide overflow

--- a/packages/components/src/modal/src/components/osds-modal/osds-modal.scss
+++ b/packages/components/src/modal/src/components/osds-modal/osds-modal.scss
@@ -71,6 +71,12 @@
   display: none;
 }
 
+.osds-modal {
+  &--opened {
+    overflow: hidden;
+  }
+}
+
 // apply the theme template for the component
 @include ods-theme-component {
   @include osds-modal-theme-color;
